RESOLVED FIXED283252
Further reduce use of WTF_ALLOW_UNSAFE_BUFFER_USAGE in WTF/
https://bugs.webkit.org/show_bug.cgi?id=283252
Summary Further reduce use of WTF_ALLOW_UNSAFE_BUFFER_USAGE in WTF/
Chris Dumez
Reported 2024-11-16 19:55:03 PST
Further reduce use of WTF_ALLOW_UNSAFE_BUFFER_USAGE in WTF/.
Attachments
Chris Dumez
Comment 1 2024-11-16 20:17:01 PST
EWS
Comment 2 2024-11-17 18:53:11 PST
Committed 286712@main (83a834b1ac4f): <https://commits.webkit.org/286712@main> Reviewed commits have been landed. Closing PR #36767 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-17 18:54:12 PST
Nikolas Zimmermann
Comment 4 2024-11-18 02:21:59 PST
This broke compilation for me with the WPE wkdev-sdk container based build using clang 18.1.3 that is shipped with Ubuntu 24.04. Error: /host/home/nzimmermann/Software/GitRepositories/WebKit/Source/WTF/wtf/SHA1.cpp:111:9: error: unsafe buffer access [-Werror,-Wunsafe-buffer-usage] 111 | m_buffer[m_cursor++] = std::to_integer<uint8_t>(byte); Apparently our clang linux post-commit bots which still use the flatpak SDK with clang 18.1.5 are fine. Still investigating.
Carlos Bentzen
Comment 5 2024-11-19 07:03:33 PST
I sent this patch that should fix compilation with Clang 18 in wkdev-sdk: https://github.com/WebKit/WebKit/pull/36845
Note You need to log in before you can comment on or make changes to this bug.