Further reduce use of WTF_ALLOW_UNSAFE_BUFFER_USAGE in WTF/ https://bugs.webkit.org/show_bug.cgi?id=283252

Reviewed by Darin Adler.

* Source/WTF/wtf/SHA1.cpp:
(WTF::SHA1::addUTF8Bytes):
* Source/WTF/wtf/SixCharacterHash.cpp:
(WTF::integerToSixCharacterHashString):
* Source/WTF/wtf/StackBounds.cpp:
(WTF::StackBounds::newThreadStackBounds):
(WTF::StackBounds::currentThreadStackBoundsInternal):
* Source/WTF/wtf/StringPrintStream.cpp:
(WTF::StringPrintStream::StringPrintStream):
(WTF::StringPrintStream::~StringPrintStream):
(WTF::StringPrintStream::vprintf):
(WTF::StringPrintStream::toCString const):
(WTF::StringPrintStream::reset):
(WTF::StringPrintStream::tryToString const):
(WTF::StringPrintStream::toString const):
(WTF::StringPrintStream::toStringWithLatin1Fallback const):
(WTF::StringPrintStream::increaseSize):
(WTF::StringPrintStream::toCString): Deleted.
(WTF::StringPrintStream::tryToString): Deleted.
(WTF::StringPrintStream::toString): Deleted.
(WTF::StringPrintStream::toStringWithLatin1Fallback): Deleted.
* Source/WTF/wtf/StringPrintStream.h:
* Source/WTF/wtf/dtoa/double-conversion.cc:
* Source/WTF/wtf/text/EscapedFormsForJSON.h:
* Source/WTF/wtf/text/StringBuilderJSON.cpp:
(WTF::StringBuilder::appendQuotedJSONString):
* Source/WTF/wtf/text/StringBuilderJSON.h:
(WTF::appendEscapedJSONStringContent):
* Source/WTF/wtf/text/StringSearch.h:
(WTF::BoyerMooreHorspoolTable::initializeTable):
(WTF::BoyerMooreHorspoolTable::findInner const):

Canonical link: https://commits.webkit.org/286712@main